New Crowdin updates (#722)
* New translations strings.xml (German)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Belarusian)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Irish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Punjabi)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Bengali)

* New translations strings.xml (Croatian)

* New translations strings.xml (Norwegian Nynorsk)

* New translations strings.xml (Hindi)

* New translations strings.xml (Odia)

* New translations strings.xml (Nepali)

* New translations strings.xml (Russian, Belarus)

* New translations strings.xml (Romanian)

* New t

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -44,7 +44,7 @@
     <string name="settings_title">Ustawienia</string>
     <string name="settings_general">Ogólne</string>
     <string name="settings_trash_title">Użyj kosza</string>
-    <string name="settings_trash_summary">Przechowuje usunięte zdjęcia i filmy przez 30 dni.\nUsunięcie ich spowoduje ich trwałą utratę, jeśli jest wyłączony.</string>
+    <string name="settings_trash_summary">Przechowuje usunięte zdjęcia i filmy przez 30 dni.\nWyłączenie tej funkcji spowoduje to, że zdjęcia zostaną od razu nieodwracalnie usunięte.</string>
     <string name="move_album_to_trash">Przenieś album do kosza</string>
     <string name="pinned_albums_title">Przypięte albumy</string>
     <string name="unpin">Odepnij</string>
@@ -313,6 +313,11 @@
     <string name="markup">Znacznik</string>
     <string name="type_size">Rozmiar</string>
     <string name="encrypting_media">Szyfrowanie multimediów...</string>
+    <string name="vault_encrypt_notification_title">Encrypting media</string>
+    <string name="vault_decrypt_notification_title">Decrypting media</string>
+    <string name="vault_operation_in_progress">%1$d%% completed</string>
+    <string name="vault_notification_channel_name">Vault Operations</string>
+    <string name="vault_notification_channel_description">Progress of encryption / decryption tasks</string>
     <string name="decrypt_vault">Odszyfruj Sejf</string>
     <string name="restore_vault_summary">Obecny sejf i jego zawartość będzie odszyfrowana i odzyskana.\nTa akcja spowoduje, że twoje multimedia znowu będą dostępne poza aplikacją.</string>
     <string name="restore_vault_title">Potwierdzić Odszyfrowywanie?</string>
@@ -339,16 +344,16 @@
     <string name="refresh_metadata">Odśwież metadane</string>
     <string name="refresh_metadata_summary">Jeśli coś jest nie tak, odśwież wszystkie zapisane metadane multimediów</string>
     <string name="metadata_refresh_toast">Odświeżanie metadanych...</string>
-    <string name="change_thumbnail">Change album cover</string>
-    <string name="delete_thumbnail">Remove custom album cover</string>
-    <string name="settings_theme">Themes</string>
-    <string name="settings_theme_summary">Customise your media gallery</string>
-    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="change_thumbnail">Zmień okładkę albumu</string>
+    <string name="delete_thumbnail">Usuń własną okładkę albumu</string>
+    <string name="settings_theme">Motywy</string>
+    <string name="settings_theme_summary">Dostosuj swoją galerię multimediów</string>
+    <string name="customization_summary">Dostosuj aplikację do własnych preferencji</string>
     <string name="settings_misc">Miscellaneous</string>
     <string name="settings_misc_summary">Various uncategorised settings</string>
-    <string name="settings_general_summary">Various general settings</string>
-    <string name="ai_category_summary">Control what Smart Features you want to use</string>
-    <string name="video_playback">Video Playback</string>
+    <string name="settings_general_summary">Różne ogólne ustawienia</string>
+    <string name="ai_category_summary">Kontroluj, z jakich inteligentnych funkcji chcesz korzystać</string>
+    <string name="video_playback">Odtwarzanie wideo</string>
     <string name="interface_settings">Interface</string>
     <string name="show_date_header">Show Media Date Header</string>
     <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
@@ -357,9 +362,15 @@
     <string name="extended_date_header_title">Extended Date Header</string>
     <string name="clear_selection">Remove All</string>
     <string name="selfies">Selfies</string>
-    <string name="screenshots">Screenshots</string>
+    <string name="screenshots">Zrzuty ekranu</string>
     <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
     <string name="suggestions">Suggestions</string>
+    <string name="post_notifications">Powiadomienia</string>
+    <string name="post_notifications_summary">Allows the app to display notifications</string>
+    <string name="search">Search</string>
+    <string name="search_media">Search media</string>
+    <string name="rotate">Rotate</string>
+    <string name="locked">Locked</string>
     <plurals name="item_count">
         <item quantity="one">%s pozycja</item>
         <item quantity="few">%s pozycji</item>
