--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -313,6 +313,11 @@
     <string name="markup">Разметка</string>
     <string name="type_size">Размер</string>
     <string name="encrypting_media">Шифрование медиа...</string>
+    <string name="vault_encrypt_notification_title">Шифрование медиа</string>
+    <string name="vault_decrypt_notification_title">Расшифровка медиа</string>
+    <string name="vault_operation_in_progress">%1$d%% завершено</string>
+    <string name="vault_notification_channel_name">Операции в сейфе</string>
+    <string name="vault_notification_channel_description">Прогресс задач шифрования / расшифровки</string>
     <string name="decrypt_vault">Расшифровка сейфа</string>
     <string name="restore_vault_summary">Текущий сейф и его содержимое будет расшифровано и восстановлено.\nЭто действие снова сделает ваш контент доступным в Галерее.</string>
     <string name="restore_vault_title">Подтвердить расшифровку?</string>
@@ -339,27 +344,33 @@
     <string name="refresh_metadata">Обновить метаданные</string>
     <string name="refresh_metadata_summary">Если что-то не так, обновите все сохраненные метаданные мультимедиа</string>
     <string name="metadata_refresh_toast">Обновление метаданных...</string>
-    <string name="change_thumbnail">Change album cover</string>
-    <string name="delete_thumbnail">Remove custom album cover</string>
-    <string name="settings_theme">Themes</string>
-    <string name="settings_theme_summary">Customise your media gallery</string>
-    <string name="customization_summary">Optmise the app to your own preferences</string>
-    <string name="settings_misc">Miscellaneous</string>
-    <string name="settings_misc_summary">Various uncategorised settings</string>
-    <string name="settings_general_summary">Various general settings</string>
-    <string name="ai_category_summary">Control what Smart Features you want to use</string>
-    <string name="video_playback">Video Playback</string>
-    <string name="interface_settings">Interface</string>
-    <string name="show_date_header">Show Media Date Header</string>
-    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
-    <string name="show_selection_titles">Display Selection Item\'s Title</string>
-    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
-    <string name="extended_date_header_title">Extended Date Header</string>
-    <string name="clear_selection">Remove All</string>
-    <string name="selfies">Selfies</string>
-    <string name="screenshots">Screenshots</string>
-    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
-    <string name="suggestions">Suggestions</string>
+    <string name="change_thumbnail">Изменить обложку альбома</string>
+    <string name="delete_thumbnail">Убрать обложку альбома</string>
+    <string name="settings_theme">Темы</string>
+    <string name="settings_theme_summary">Настройте свою галерею</string>
+    <string name="customization_summary">Настройте приложение по вашим предпочтениям</string>
+    <string name="settings_misc">Прочее</string>
+    <string name="settings_misc_summary">Различные настройки без категории</string>
+    <string name="settings_general_summary">Различные общие настройки</string>
+    <string name="ai_category_summary">Управляйте, какие умные функции вы хотите использовать</string>
+    <string name="video_playback">Воспроизведение видео</string>
+    <string name="interface_settings">Интерфейс</string>
+    <string name="show_date_header">Показывать заголовок даты медиа</string>
+    <string name="show_date_header_summary">Показывать дату медиа в заголовке верхней панели просмотра медиа.</string>
+    <string name="show_selection_titles">Отображать название выделенного элемента</string>
+    <string name="show_selection_titles_summary">Отображать в панели выбора заголовки действий</string>
+    <string name="extended_date_header_title">Расширенный заголовок даты</string>
+    <string name="clear_selection">Убрать всё</string>
+    <string name="selfies">Селфи</string>
+    <string name="screenshots">Снимки экрана</string>
+    <string name="search_images_videos"><![CDATA[Поиск фото и видео]]></string>
+    <string name="suggestions">Предложения</string>
+    <string name="post_notifications">Уведомления</string>
+    <string name="post_notifications_summary">Позволяет приложению отображать уведомления</string>
+    <string name="search">Поиск</string>
+    <string name="search_media">Поиск медиа</string>
+    <string name="rotate">Повернуть</string>
+    <string name="locked">Заблокировано</string>
     <plurals name="item_count">
         <item quantity="one">%s элемент</item>
         <item quantity="few">%s эл.</item>
