--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -371,6 +371,7 @@
     <string name="search_media">Søg i medier</string>
     <string name="rotate">Roter</string>
     <string name="locked">Låst</string>
+    <string name="classification_unwanted_summary2"><![CDATA[If you would like to opt-out from this feature, you can disable it from here. If you however change your mind, you can always enable it back from Settings > Smart Features]]></string>
     <plurals name="item_count">
         <item quantity="one">%s element</item>
         <item quantity="other">%s elementer</item>
