--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -371,6 +371,7 @@
     <string name="search_media">Поиск медиа</string>
     <string name="rotate">Повернуть</string>
     <string name="locked">Заблокировано</string>
+    <string name="classification_unwanted_summary2"><![CDATA[If you would like to opt-out from this feature, you can disable it from here. If you however change your mind, you can always enable it back from Settings > Smart Features]]></string>
     <plurals name="item_count">
         <item quantity="one">%s элемент</item>
         <item quantity="few">%s эл.</item>
