--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -371,6 +371,7 @@
     <string name="search_media">搜索媒体</string>
     <string name="rotate">旋转</string>
     <string name="locked">已锁</string>
+    <string name="classification_unwanted_summary2"><![CDATA[If you would like to opt-out from this feature, you can disable it from here. If you however change your mind, you can always enable it back from Settings > Smart Features]]></string>
     <plurals name="item_count">
         <item quantity="other">%s 个项目</item>
     </plurals>
