--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -375,6 +375,7 @@
     <string name="other">Other</string>
     <string name="settings_trash_confirmation_title">Require confirmation on trash</string>
     <string name="settings_trash_confirmation_summary">Enable to require an extra confirmation before moving your media to the trash</string>
+    <string name="classification_unwanted_summary2"><![CDATA[If you would like to opt-out from this feature, you can disable it from here. If you however change your mind, you can always enable it back from Settings > Smart Features]]></string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
